# optmap

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: nn.yaml  optmap.yaml
include/optmap/: Feature.h  SortedFeatureList.h  optmap.h
launch/: optmap.launch  optmap.rviz  optmap_launch.py
msg/: Descriptor.msg  OptmapPointcloud.msg  OptmapPoseArray.msg
optmap/: pc_descriptor_node.py
optmap/model/: overlap_transformer.py
scripts/nn/: pc_descriptor_node.py  pkg_install.txt
src/optmap/: SortedFeatureList.cc  optmap.cc  optmap_node.cc
srv/: OptmapFull.srv  OptmapHull.srv  OptmapPosition.srv  OptmapPositionAndTime.srv  OptmapSetVoxelization.srv  optmap_full.srv  optmap_position.srv  optmap_position_and_time.srv
