<?xml version="1.0"?>

<package format="3">
  <name>optmap</name>
  <version>1.0.0</version>
  <description>OptMap: Real-time and flexible LiDAR submap generation using streaming submodular maximization.</description>
  
  <maintainer email="davidthorne@ucla.edu">David Thorne</maintainer>
  <maintainer email="nchen@ucla.edu">Nathan Chan</maintainer>
  <maintainer email="btlopez@ucla.edu">Brett T. Lopez</maintainer>
  
  <author>David Thorne</author>
  <author>Nathan Chan</author>
  <author>Brett T. Lopez</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>

  <depend>custom_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group> 

</package>